tutotiral string fix, rifiuti search result text truncate removed, data update

--- a/mobile/www/css/style.css
+++ b/mobile/www/css/style.css
@@ -372,7 +372,7 @@ body.platform-browser .scroll-bar-fade-out {
 .tipidirifiuto ion-list ion-item a {
     background-color: #eeeeee !important;
 }
-.tipidirifiuto ion-list ion-item a, .tipodiraccolta ion-list ion-item a {
+.tipidirifiuto ion-list ion-item a, .tipodiraccolta ion-list ion-item a, .home-tipidirifiuti ion-item a {
     white-space: normal;
 }
 /* Tipo di rifiuto */
